syntax = "proto3";

package org.e2eelab.skissm.proto;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "E2eeAddress";
option java_multiple_files = true;

message e2ee_address {
    bytes domain = 1;
    bytes user_id = 2;
    bytes device_id = 3;
    bytes group_id = 4;
}